# ant-colony-vs-bfs

./: .gitignore  .gitmodules  README.md
.github/workflows/: clang.yml  docker.yml
cpp/: .clang-format  CMakeLists.txt  Dockerfile  Doxyfile  README.md  docker-compose.yml  format.sh
cpp/apicaller/: CMakeLists.txt
cpp/apicaller/src/: opencaching.cpp  opencaching.hpp  openroute.cpp  openroute.hpp  pyhelper.hpp  utils.cpp  utils.hpp
cpp/data/: jsontest  jsontest_mockup  matrix10
cpp/include/ThreadPool/: GITHUB.url  ThreadPool.h
cpp/include/argparse/: argparse.hpp
cpp/include/indicators/: GITHUB.url  progress_bar.hpp
cpp/include/indicators/details/: stream_helper.hpp
cpp/include/termcolor/: termcolor.hpp
cpp/smac/: antcount.pcs  antcountScenario.txt  antcountwrapper.py  decentConfig.txt  fmax_aco.py  fmax_aco_antcount.py  fmax_aco_mult.py  fmax_aco_multipleStartingPoints.py  fmax_aco_no_time.py  fmax_aco_optimized_variables.py  fmax_aco_t1.py  fmax_aco_t10.py  fmax_aco_t30.py  fmax_aco_t60.py  multscenario.txt  multscenario2.txt  multwrapper2.py  nosmacreslog.text  param_config_space.pcs  reslog.txt  runexperiments.sh  scenario.txt  scenario1.txt  scenario10.txt  scenario1log.txt  scenario30.txt  scenario60.txt  smacc  wrapper.py  wrapper1.py  wrapper10.py  wrapper30.py  wrapper60.py  wrapper_no_time.py
cpp/smac/bettersmac/: IStrongwrapper.py  routeplanner  strongwrapper.py  tester.py
cpp/smac/evaluation/: berlinres.txt  dfsplanner  evaluate.sh  evaluateHamburg.sh  evaluateall.sh  evaluateberlin.sh  evaluatemulti.py  evaluatemultiDFS.py  evaluatemulticonf.sh  evaluatemunchen.sh  evaluation.txt  hamburgres.txt  multiconfres.txt  munchenres.txt
cpp/smac/godrun/: getaveragescore.py  getscore.py  godparams.pcs  godrun.txt  godrunwrapper.py  main.py  routeplanner  run_berlin.py  run_hamburg.py  run_munchen.py
cpp/smac/stronger_godrun/: main.py  params.pcs  run_berlin.py  run_hamburg.py  run_munchen.py  scenario.txt  strongwrapper.py
cpp/src/: api.cpp  api.h  apicaller.cpp  apicaller.h  baseAlgorithm.cpp  baseAlgorithm.h  coords.h  geocacheapi.cpp  geocacheapi.h  jsonparser.cpp  jsonparser.h  main.cpp  naiveAlgorithm.cpp  naiveAlgorithm.h  node.h  openrouteapi.cpp  openrouteapi.h  poi.cpp  poi.h  rapidjson.h  test.cpp  test.h
cpp/src/aco/: Ant.cpp  Ant.hpp  AntColony.cpp  AntColony.hpp  Colony.cpp  Colony.hpp  MatrixData.hpp  Parameters.hpp  Solution.hpp  data.hpp  run.cpp  run.hpp
cpp/src/apicaller/: CMakeLists.txt  opencaching.cpp  opencaching.hpp  utils.hpp
cpp/src/boostGraph/: edgeData.h  nodeData.h  wGraph.cpp  wGraph.h
cpp/src/common/: BaseAlgorithmRunner.hpp
cpp/src/graph/: edge.cpp  edge.h  edgeData.cpp  edgeData.h  grap.cpp  graph.cpp  graph.h  node.cpp  node.h  wGraph.cpp  wGraph.h
cpp/src/ownAlgorithm/: DFSBranchLimitAlgorithm.cpp  DFSBranchLimitAlgorithm.h  baseAlgorithm.cpp  baseAlgorithm.h  depthFirstAlgorithm.cpp  depthFirstAlgorithm.h  naiveAlgorithm.cpp  naiveAlgorithm.h  threeBranchAlgorithm.cpp  threeBranchAlgorithm.h
cpp/src/rapidjson/: allocators.h  cursorstreamwrapper.h  document.h  encodedstream.h  encodings.h  filereadstream.h  filewritestream.h  fwd.h  istreamwrapper.h  memorybuffer.h  memorystream.h  ostreamwrapper.h  pointer.h  prettywriter.h  rapidjson.h  reader.h  schema.h  stream.h  stringbuffer.h  writer.h
cpp/src/rapidjson/error/: en.h  error.h
cpp/src/rapidjson/internal/: biginteger.h  clzll.h  diyfp.h  dtoa.h  ieee754.h  itoa.h  meta.h  pow10.h  regex.h  stack.h  strfunc.h  strtod.h  swap.h
cpp/src/rapidjson/msinttypes/: inttypes.h  stdint.h
cpp/src/utils/: ArgumentParser.hpp  print.hpp  printc.hpp  vector.hpp
cpp/tests/: DFSBranchLimitAlgorithmtest.cpp  ThreeBranchAlgorithmtest.cpp  acotest.cpp  apicaller_test.cpp  basictests.cpp  depthFirstAlgorithmtest.cpp  example_geocaching_result.json  geocacheapitest.cpp  graphtest.cpp  jsonparsertest.cpp  naivealgorithmtest.cpp  opencaching_test.cpp  rapidjson.cpp  rapidjson_test.cpp  testall.cpp  testfile.csv  utilstest.cpp
py/: Makefile  README.md  geocaching.py  main.py  openroute.py  pyproject.toml  results.json
py/apicaller/: __init__.py  geocaching.py  opencaching.py  openroute.py
py/notebooks/: aco_run.py  aco_stats.ipynb  aco_test.ipynb  algo_results.ipynb  algo_results.py  ant_colony.py  context.py  dataset_test.py  dataset_viz.ipynb  opencaching.ipynb  ors-app.ipynb  path_statistics.ipynb
py/src/: dataset_builder.py  dataset_cleaner.py  klim_exp.py  opencaching.py  openroute.py  path_analyzer.py  path_statictics.py  ping_ors.py
py/src/utils/: api_requests.py  caching.py  helpers.py  matrix.py
py/tests/: basictest.py  context.py  test_geocaching.py  test_opencaching.py  test_openroute.py
release_vm/: README.md
