[tool.poetry]
name = "py-apicaller"
version = "0.1.0"
description = "The python implementation of our API calls."
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.24.0"
tqdm = "^4.50.2"
ACO-Pants = "^0.5.2"
matplotlib2tikz = "^0.7.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
